--- a/public/index.css
+++ b/public/index.css
@@ -25,3 +25,9 @@
 .course .price.big {
   font-size: 2.5rem;
 }
+
+.card-action.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
