--- a/views/card.hbs
+++ b/views/card.hbs
@@ -1,27 +1,31 @@
 <h1>Корзина</h1>
 
 <div id="card">
-  {{#if courses.length}}
+{{#if courses.length}}
   <table>
     <thead>
       <tr>
-        <th>Наименование</th>
+        <th>Название</th>
         <th>Количество</th>
         <th>Действия</th>
       </tr>
     </thead>
     <tbody>
+      
       {{#each courses}}
       <tr>
         <td>{{title}}</td>
         <td>{{count}}</td>
-        <td><button class="bth btn-small js-remove" data-id="{{id}}">Удалить</button></td>
+        <td>
+          <button class="btn btm-small js-remove" data-id="{{id}}">Удалить</button>
+        </td>
       </tr>
       {{/each}}
     </tbody>
   </table>
-  <p><strong>Итого:</strong> <span class="price">{{total}}</span></p>
-  {{else}}
+
+  <p><strong>Цена:</strong> <span class="price">{{price}}</span></p>
+{{else}}
   <p>Корзина пуста</p>
-  {{/if}}
+{{/if}}
 </div>
